# pydbsprocket

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
example/: RunProcexample.py  webServices.py
example/config/: database.py
example/data/: base_data.py
example/db_calls/: yt.py
example/scripts/: db_setup.sql
example/scripts/db_objs/: bulk_insert_video_data.sql  get_channel_video_data.sql  video_data.sql
pydbsprocket/core/: base.py  connections.py  db_types.py  decorators.py  exceptions.py  provider.py  provider_discovery.py  provider_mapping.py
pydbsprocket/data_providers/postgres/: __init__.py  connection.py
