[project]
name = "pydbsprocket"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydbsprocket"]

[dependency-groups]
dev = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]
